@@ -374,7 +374,7 @@ set REPL_311! { return formatWhois("Whois", "\c35\b $+ $1 \b\r[\r $+ $2 $+ \r@\r
 set REPL_312! { return formatWhois("Server", "\c36 $+ $2 \c33\r(\r $+ $3- $+ \r)\r"); }
 set REPL_313! { return formatWhois("Ircop", "\c35\b $+ $1 \b\c33 $+ $2-"); }
 set REPL_314! { return formatWhois("Who Was", "\c35\b $+ $1 \b\r[\r $+ $2 $+ \r@\r $+ $3 $+ \r]\c33:\r $5-"); }
-set REPL_317! { return formatWhois("Idle", formatTime($2)); }
+set REPL_317! { return formatWhois("Idle", formatTime3($2)); }
 set REPL_330! { return formatWhois("Register", "\c33 $+ $1 $3- \c35\b $+ $2"); }
 set REPL_318  { return ""; } # hide END of /WHOIS 
 set REPL_369  { return ""; } # hide END of /WHOWAS 
@@ -706,7 +706,7 @@ sub DCCInformation
 
    if ($type eq "CHAT")
    {
-     $info = "\c33\bI\bdle\r:\r " . formatTime(getDCCIdleTime($conn) / 1000);
+     $info = "\c33\bI\bdle\r:\r " . formatTime3(getDCCIdleTime($conn) / 1000);
    }
    else
    {
