@@ -58,10 +58,10 @@ public class ClientUtils
 
     public static String tagline()
     {
-        String taglines[] = { 
-            "highly caffeinated", 
-            "Fat butane, grubbin' on French fries", 
-            "<JakieChan> butan: java sucks", 
+        String taglines[] = {
+            "highly caffeinated",
+            "Fat butane, grubbin' on French fries",
+            "<JakieChan> butan: java sucks",
             "Clean. Christian. Comprehensive.",
         };
         int r = ctime() % taglines.length;
@@ -71,7 +71,7 @@ public class ClientUtils
     public static String formatTime(long seconds)
     {
         StringBuffer rv = new StringBuffer();
- 
+
         if (seconds < 60)
         {
           return seconds + " seconds";
@@ -93,7 +93,7 @@ public class ClientUtils
     public static String formatTime2(long secs)
     {
         StringBuffer rv = new StringBuffer();
- 
+
         int seconds = (int)secs, minutes = 0, hours = 0, days = 0;
 
         days    = seconds / (60 * 60 * 24);
@@ -126,13 +126,37 @@ public class ClientUtils
         return rv.toString();
     }
 
+    public static String formatTime3(long secs) {
+        int seconds = (int) secs;
+        int minutes = 0;
+        int hours = 0;
+        int days = 0;
+
+        days = seconds / (60 * 60 * 24);
+        hours = seconds / (60 * 60) % 24;
+        minutes = (seconds / 60) % 60;
+        seconds %= 60;
+
+        StringBuffer buf = new StringBuffer();
+        if (days > 0)
+            buf.append(days).append(days != 1 ? " days, " : " day, ");
+        if (days > 0 || hours > 0)
+            buf.append(hours).append(hours != 1 ? " hours, " : " hour, ");
+        if (hours > 0 || minutes > 0)
+            buf.append(minutes).append(minutes != 1 ? " minutes, " : " minute, ");
+
+        buf.append(seconds).append(seconds != 1 ? " seconds" : " second");
+
+        return buf.toString();
+    }
+
     public static String formatBytes(long bytes)
     {
         if (bytes < 1024)
         {
            return bytes + "b";
         }
- 
+
         bytes = bytes / 1024;
 
         if (bytes < 1024)
@@ -141,14 +165,14 @@ public class ClientUtils
         }
 
         bytes = bytes / 1024;
-    
+
         if (bytes < 1024)
         {
            return bytes + "mb";
         }
 
         bytes = bytes / 1024;
-  
+
         return bytes + "GB";
     }
 
@@ -173,7 +197,7 @@ public class ClientUtils
 
         saved.append("-");
         saved.append(value.getSize());
- 
+
         return saved.toString();
     }
 
@@ -209,7 +233,7 @@ public class ClientUtils
            d = h;
         }
 
-        switch (type) 
+        switch (type)
         {
            case 0:  return "*!"+u+"@"+h;
            case 1:  return "*!*"+u+"@"+h;
@@ -284,7 +308,7 @@ public class ClientUtils
 
         return rv;
     }
-  
+
     public static HashMap getEventHashMap(String target, String parms)
     {
         HashMap temp = new HashMap();
@@ -340,7 +364,7 @@ public class ClientUtils
            rv.append(value.toString());
 
            return rv.toString();
-	} 
+	}
 
     public static String intToDay(int d)
 	{
@@ -412,7 +436,7 @@ public class ClientUtils
     {
        Long temp = new Long(System.currentTimeMillis() / 1000);
        return temp.intValue();
-    }      
+    }
 
      private static String CP437TABLE = "\u0000\u0001\u0002\u0003\u0004\u0005\u0006\u0007\u0008\u0009\n\u000B\u000C\r\u000E\u000F\u0010\u0011\u0012\u0013\u0014\u0015\u0016\u0017\u0018\u0019\u001A\u001B\u001C\u001D\u001E\u001F\u0020\u0021\"\u0023\u0024\u0025\u0026'\u0028\u0029\u002A\u002B\u002C\u002D\u002E\u002F\u0030\u0031\u0032\u0033\u0034\u0035\u0036\u0037\u0038\u0039\u003A\u003B\u003C\u003D\u003E\u003F\u0040\u0041\u0042\u0043\u0044\u0045\u0046\u0047\u0048\u0049\u004A\u004B\u004C\u004D\u004E\u004F\u0050\u0051\u0052\u0053\u0054\u0055\u0056\u0057\u0058\u0059\u005A\u005B\\\u005D\u005E\u005F\u0060\u0061\u0062\u0063\u0064\u0065\u0066\u0067\u0068\u0069\u006A\u006B\u006C\u006D\u006E\u006F\u0070\u0071\u0072\u0073\u0074\u0075\u0076\u0077\u0078\u0079\u007A\u007B\u007C\u007D\u007E\u007F\u00C7\u00FC\u00E9\u00E2\u00E4\u00E0\u00E5\u00E7\u00EA\u00EB\u00E8\u00EF\u00EE\u00EC\u00C4\u00C5\u00C9\u00E6\u00C6\u00F4\u00F6\u00F2\u00FB\u00F9\u00FF\u00D6\u00DC\u00A2\u00A3\u00A5\u20A7\u0192\u00E1\u00ED\u00F3\u00FA\u00F1\u00D1\u00AA\u00BA\u00BF\u2310\u00AC\u00BD\u00BC\u00A1\u00AB\u00BB\u2591\u2592\u2593\u2502\u2524\u2561\u2562\u2556\u2555\u2563\u2551\u2557\u255D\u255C\u255B\u2510\u2514\u2534\u252C\u251C\u2500\u253C\u255E\u255F\u255A\u2554\u2569\u2566\u2560\u2550\u256C\u2567\u2568\u2564\u2565\u2559\u2558\u2552\u2553\u256B\u256A\u2518\u250C\u2588\u2584\u258C\u2590\u2580\u03B1\u00DF\u0393\u03C0\u03A3\u03C3\u00B5\u03C4\u03A6\u0398\u03A9\u03B4\u221E\u03C6\u03B5\u2229\u2261\u00B1\u2265\u2264\u2320\u2321\u00F7\u2248\u00B0\u2219\u00B7\u221A\u207F\u00B2\u25A0 ";
 
@@ -425,7 +449,7 @@ public class ClientUtils
 
            if (value < CP437TABLE.length())
               temp[x] = CP437TABLE.charAt(value);
-       }        
+       }
 
        return new String(temp);
     }
@@ -481,7 +505,7 @@ public class ClientUtils
         StringBuffer temp = new StringBuffer();
 
         temp.append("# jIRCii Theme File, scripters feel free to edit this file to export more settings\n");
-        temp.append("#     by default only color settings are exported.\n\n");    
+        temp.append("#     by default only color settings are exported.\n\n");
 
         temp.append("# some miscellaneous colors\n");
         temp.append(generateThemeLine("statusbar.color", null));
@@ -492,7 +516,7 @@ public class ClientUtils
 
         temp.append("\n");
 
-        temp.append("# the actual color map\n");       
+        temp.append("# the actual color map\n");
 
         for (int x = 0; x < 100; x++)
         {
@@ -522,7 +546,7 @@ public class ClientUtils
         }
 
         return (new File(name)).getName();
-    } 
+    }
 
     private static String generateThemeLine(String var, String comment)
     {
@@ -559,12 +583,12 @@ public class ClientUtils
 
         File   cwd;
         String cwf = null;
-        
+
         File temp = getFile(pfile);
         if (temp.isDirectory())
         {
            cwd = temp;
-           cwf = null; 
+           cwf = null;
         }
         else if (temp.getParentFile() != null && temp.getParentFile().isDirectory())
         {
